Start dev ver.